# mintex

./: .gitignore  .gitmodules  CMakeLists.txt  completion.sh  conanfile.txt
libs/eth/: CMakeLists.txt  Common.cpp  CommonData.cpp  RLP.cpp
src/resp_generator/: CMakeLists.txt  main.cpp
src/resp_generator/assets/: explorer.json  gate.json  liquidity.json
src/tx/: CMakeLists.txt
src/tx/include/mintex-tx/: minter_address.h  minter_hash.h  minter_private_key.h  minter_public_key.h  rlp_encodable.h  secp256k1_raii.h  signature.h  signature_data.h  tx.h  tx_builder.h  tx_buy_coin.h  tx_create_coin.h  tx_create_multisig_address.h  tx_data.h  tx_declare_candidacy.h  tx_delegate.h  tx_edit_candidate.h  tx_fwd.h  tx_multisend.h  tx_redeem_check.h  tx_sell_all_coins.h  tx_sell_coin.h  tx_send_coin.h  tx_set_candidate_on_off.h  tx_type.h  tx_unbond.h  tx_unbound.h  utils.h
src/tx/src/: mintex.h  utils.cpp
src/tx/src/data/: minter_address.cpp  minter_hash.cpp  minter_private_key.cpp  minter_public_key.cpp
src/tx/src/tx/: signature_data.cpp  tx.cpp  tx_builder.cpp  tx_buy_coin.cpp  tx_create_coin.cpp  tx_create_multisig_address.cpp  tx_declare_candidacy.cpp  tx_delegate.cpp  tx_edit_candidate.cpp  tx_multisend.cpp  tx_redeem_check.cpp  tx_sell_all_coins.cpp  tx_sell_coin.cpp  tx_send_coin.cpp  tx_set_candidate_on_off.cpp  tx_type.cpp  tx_unbond.cpp  tx_unbound.cpp
src/tx/tests/: priv_key_test.cpp  test_allocator.cpp  tx_buy_coin_test.cpp  tx_check_test.cpp  tx_create_coin_test.cpp  tx_declare_candidacy_test.cpp  tx_delegate_test.cpp  tx_edit_candidate_test.cpp  tx_multisend_test.cpp  tx_multisig_test.cpp  tx_sell_coin_test.cpp  tx_send_test.cpp  tx_set_candidate_on_off.cpp  utils_test.cpp
src/wallet/: CMakeLists.txt  main.cpp
src/wallet/include/wallet/: base_repository.h  crypto.h  data_validator.h  except.h  kv_storage.h  prompt_manager.h  resp_gen.h  settings.h  term.h
src/wallet/include/wallet/app/: account_controller.h  app.h  init_controller.h  secret_controller.h  settings_controller.h  tx_controller.h
src/wallet/include/wallet/data/: address_book.h  secret_storage.h  simple_storage.h
src/wallet/include/wallet/explorer/: base.h  repository.h  results.hpp
src/wallet/include/wallet/gate/: base.h  exchange_calculator.h  repository.h  results.hpp
src/wallet/include/wallet/liquidity/: base.h  repository.h  results.hpp
src/wallet/src/: crypto.cpp  data_validator.cpp  kv_storage.cpp  prompt_manager.cpp  settings.cpp  term.cpp
src/wallet/src/app/: account_controller.cpp  app.cpp  init_controller.cpp  secret_controller.cpp  settings_controller.cpp  tx_controller.cpp
src/wallet/src/base/: base_repository.cpp  base_repository.h
src/wallet/src/data/: address_book.cpp  secret_storage.cpp  simple_storage.cpp
src/wallet/src/explorer/: results.cpp
src/wallet/src/repository/: explorer_repository.h
src/wallet/tests/: address_book_test.cpp  secret_storage_test.cpp  transaction_item_deser_test.cpp
